[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="TimeLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 10.0
offset_top = 10.0
offset_right = 600.0
offset_bottom = 30.0
text = "Time: --"

[node name="NeedsLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 10.0
offset_top = 30.0
offset_right = 600.0
offset_bottom = 50.0
text = "Needs: --"

[node name="MoodletsLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 10.0
offset_top = 50.0
offset_right = 900.0
offset_bottom = 70.0
text = "Moodlets: --"

[node name="TaskLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 10.0
offset_top = 70.0
offset_right = 900.0
offset_bottom = 90.0
text = "Task: --"

